Edit gradle dockerfile

--- a/src/main/resources/templates/Hello.html
+++ b/src/main/resources/templates/Hello.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>Hello!</h1>
-    <h1>I love adpro <3 sangat advanced <3 i miss pbp</h1>
+    <h1>Advanced Programming</h1>
 </body>
 </html>
